# vehicle-arena

./: .gitmodules  README.md
VehicleArena/VehicleArena/: CMakeLists.txt
VehicleArena/VehicleArena/Array/: Array.hpp  Array_Axis_View.hpp  Array_Forward.hpp  Array_Resizer.hpp  Array_Shape.cpp  Array_Shape.hpp  Base_Dense_Array.hpp  Base_Dense_Fixed_Array.hpp  CMakeLists.txt  Chunked_Array.hpp  Conjugate_Transpose_Array.hpp  Consteval_Workaround.hpp  Fixed_Array.hpp  Fixed_Array_Hash.hpp  Fixed_Array_Shape.hpp  Fixed_History.hpp  Non_Copying_Vector.hpp  Range.hpp  Sparse_Array.hpp  Vector.hpp  Verbose_Vector.hpp
VehicleArena/VehicleArena/Audio/: Alut_Init_Without_Context.cpp  Alut_Init_Without_Context.hpp  Audio_Buffer.cpp  Audio_Buffer.hpp  Audio_Buffer_Sequence.cpp  Audio_Buffer_Sequence.hpp  Audio_Buffer_Sequence_With_Hysteresis.cpp  Audio_Buffer_Sequence_With_Hysteresis.hpp  Audio_Context.cpp  Audio_Context.hpp  Audio_Device.cpp  Audio_Device.hpp  Audio_Distance_Model.cpp  Audio_Distance_Model.hpp  Audio_Entity_State.hpp  Audio_Equalizer.cpp  Audio_Equalizer.hpp  Audio_File_Sequence.cpp  Audio_File_Sequence.hpp  Audio_Listener.cpp  Audio_Listener.hpp  Audio_Lowpass.cpp  Audio_Lowpass.hpp  Audio_Periodicity.hpp  Audio_Resource_Context.cpp  Audio_Resource_Context.hpp  Audio_Resources.cpp  Audio_Resources.hpp  Audio_Scene.cpp  Audio_Scene.hpp  Audio_Source.cpp  Audio_Source.hpp  CHK.cpp  CHK.hpp  CMakeLists.txt  Cross_Fade.cpp  Cross_Fade.hpp  Lazy_One_Shot_Audio.cpp  Lazy_One_Shot_Audio.hpp  List_Audio_Devices.cpp  (+6 more)
VehicleArena/VehicleArena/Components/: Aim_At.cpp  Aim_At.hpp  Gun.cpp  Gun.hpp  Rigid_Body_Vehicle.hpp  Status_Writer.hpp  Weapon_Cycle.cpp  Weapon_Cycle.hpp  Yaw_Pitch_Look_At_Nodes.hpp
VehicleArena/VehicleArena/Float128/: CMakeLists.txt  Float_128.hpp  Float_128_Io.cpp  Float_128_Io.hpp
VehicleArena/VehicleArena/Geography/: Altitude_Azimuth.cpp  Altitude_Azimuth.hpp  Geographic_Coordinates.hpp  Idl_Mod.cpp  Idl_Mod.hpp  Local_Mean_Sidereal_Time.cpp  Local_Mean_Sidereal_Time.hpp  Season.hpp  Sun_Direction.cpp  Sun_Direction.hpp
VehicleArena/VehicleArena/Geometry/: Angle.hpp  Arbitrary_Orthogonal.hpp  Billboard_Id.hpp  CMakeLists.txt  Colored_Vertex.hpp  Delaunay.hpp  Delaunay_Error_Behavior.cpp  Delaunay_Error_Behavior.hpp  Fixed_Cross.hpp  Line_3D.cpp  Line_3D.hpp  Line_Normal.hpp  Material.cpp  Material.hpp  Material_Features.cpp  Material_Features.hpp  Modifier_Backlog.cpp  Modifier_Backlog.hpp  Morphology.cpp  Morphology.hpp  Normal_Vector_Error_Behavior.hpp  Physics_Material.cpp  Physics_Material.hpp  Rectangle_Triangulation_Mode.cpp  Rectangle_Triangulation_Mode.hpp  Static_Face_Lighting.cpp  Static_Face_Lighting.hpp  Triangle_3D.cpp  Triangle_3D.hpp  Triangle_Is_Right_Handed.hpp  Triangle_Normal.hpp  Triangle_Tangent.hpp  Triangle_Tangent_Error_Behavior.cpp  Triangle_Tangent_Error_Behavior.hpp  Welzl.hpp
VehicleArena/VehicleArena/Hashing/: Cached_Hash.hpp  Hash.hpp  Hash_Of_Pair.hpp  Std_Hash.hpp  Variable_And_Hash.hpp
VehicleArena/VehicleArena/Images/: CMakeLists.txt  Coordinates.hpp  Coordinates_Fixed.hpp  Dds_Header.cpp  Dds_Header.hpp  Dds_Info.cpp  Dds_Info.hpp  Draw_Generic.hpp  Extrapolate_Rgba_Colors.cpp  Extrapolate_Rgba_Colors.hpp  Flip_Mode.hpp  Linear_Interpolation.hpp  Match_Rgba_Histograms.cpp  Match_Rgba_Histograms.hpp  Normalize.hpp  Rgb24.hpp  Rgba32.hpp  StbImage1.cpp  StbImage1.hpp  StbImage3.cpp  StbImage3.hpp  StbImage4.cpp  StbImage4.hpp  Svg.hpp
VehicleArena/VehicleArena/Initialization/: Default_Nan.hpp  Default_Optional.hpp  Default_Uninitialized.hpp  Default_Uninitialized_Element.hpp  Default_Uninitialized_List.hpp  Default_Uninitialized_Vector.hpp  Initializer_List_As_Sized_Iterable.hpp  Nan_Initialized.hpp  Uninitialized.hpp
VehicleArena/VehicleArena/Io/: Binary.cpp  Binary.hpp  Binary_Reader.hpp  Binary_Writer.hpp  CMakeLists.txt  Cleanup.hpp  Endian.hpp  Folder_IStream_Dictionary.cpp  Folder_IStream_Dictionary.hpp  IIStream_Dictionary.hpp  Ini_Parser.cpp  Ini_Parser.hpp  Read_Number.hpp  Stream_And_Lock.hpp  Stream_Segment.hpp  Text.hpp  Write_Number.hpp
VehicleArena/VehicleArena/Iterator/: Enumerate.hpp  Generator.hpp  Guarded_Iterable.hpp  Iterable.hpp  Iterable_Wrapper.hpp  Mapped_Iterator.hpp  Pointer_Iterable.hpp  Reverse_Iterator.hpp  Sized_Iterable.hpp  Span.hpp  Un_Guarded_Iterator.hpp
VehicleArena/VehicleArena/Json/: Base.hpp  CMakeLists.txt  Chrono_Duration.hpp  Chrono_Time_Point.hpp  Json_Key.hpp  Json_View.cpp  Json_View.hpp  Map.hpp  Misc.cpp  Misc.hpp
VehicleArena/VehicleArena/List_Of_Pairs/: List_Of_Pair_Adapters.hpp  Readonly_List_Of_Pair_Adapters.hpp  Readonly_List_Of_Shared_Pairs.hpp  Thread_Safe_List_Of_Shared_Pairs.hpp
VehicleArena/VehicleArena/Macro_Executor/: Asset_Group_And_Id.cpp  Asset_Group_And_Id.hpp  Asset_Group_Replacement_Parameters.cpp  Asset_Group_Replacement_Parameters.hpp  Asset_References.cpp  Asset_References.hpp  Boolean_Expression.cpp  Boolean_Expression.hpp  CMakeLists.txt  Expression_Watcher.hpp  Focus.cpp  Focus.hpp  Focus_Filter.hpp  Focus_Finalizer.cpp  Focus_Finalizer.hpp  Json_Expression.cpp  Json_Expression.hpp  Json_Macro_Arguments.cpp  Json_Macro_Arguments.hpp  Macro_Keys.hpp  Macro_Line_Executor.cpp  Macro_Line_Executor.hpp  Macro_Recorder.cpp  Macro_Recorder.hpp  Notifying_Json_Macro_Arguments.cpp  Notifying_Json_Macro_Arguments.hpp  Replacement_Parameter.cpp  Replacement_Parameter.hpp  Translator.cpp  Translator.hpp  Translators.cpp  Translators.hpp
VehicleArena/VehicleArena/Map/: Generic_Map.hpp  Map.hpp  Ordered_Map.hpp  String_With_Hash_Generic_Map.hpp  String_With_Hash_Unordered_Map.hpp  Threadsafe_Creator_Map.hpp  Threadsafe_Default_Map.hpp  Threadsafe_Generic_Map.hpp  Threadsafe_Map.hpp  Threadsafe_String_Generic_Map.hpp  (+9 more)
(+1047 files in other folders)
