include(../CMakeCommands.cmake)

add_subdirectory(Array)
add_subdirectory(Geometry)
add_subdirectory(Images)
add_subdirectory(Io)
add_subdirectory(Json)
add_subdirectory(Math)
add_subdirectory(Misc)
add_subdirectory(Os)
add_subdirectory(Regex)
add_subdirectory(Scene_Graph)
add_subdirectory(Strings)
add_subdirectory(Threads)
add_subdirectory(Time)
